1998-11-19  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* config/ltmain.sh, config/ltconfig, config/libtool/libtool.m4:
	updated to current CVS libtool

1998-11-19  John R. Jackson  <jrj@purdue.edu>

	* server-src/conffile.c (get_holdingdisk, init_holdingdisk_defaults):
	set the default chunksize and the "0" and "-1" special chunksizes
	to 64 KBytes less than the maximum to allow the final read at EOF.
	* server-src/dumper.c (main): leave the chunksize as it is when it
	comes in except to truncate it to a 32 KByte boundary.
	* man/amanda.8.in: add some chunksize comments and clean up a few
	minor odds and ends.

1998-11-19  John R. Jackson  <jrj@purdue.edu>

	* recover-src/amrecover.c (main): use set_host to find the initial
	host name so we get the same alias resolution at startup as the
	sethost command.
	* recover-src/set_commands.c (set_host): report alternate names being
	attempted and only clear the directory list if a host is found.

1998-11-19  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/driverio.c (update_info_dumper): do not update
	compression or dump rates when called from
	update_failed_dump_to_date
	Reported by Michael Schmitz <mschmitz@sema.de>

1998-11-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c (main): reduce the size of the chunksize by
	2 blocks.

1998-11-18  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in: hack for paxutils was not working; fixed

1998-11-18  Michael Povel  <mcp@ladyada.han.de>

	* server-src/changer.h added new functions:changer_query
	,changer_search,changer_find, changer_label
	* server-src/changer.c added changer_query, changer_search,
	changer_find, changer_label
	* server-src/amcheck.c (taper_scan) now uses changer_find 
	* server-src/amtape.c (load_label and taper_scan) now use changer_find
	* server-src/taper.c (taper_scan) now uses changer_find
	* server-src/amlabel.c (main) added call to changer_label
	which is only an empty dummy at the moment
